# tangnano20k_template

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
hardware/: constraints.cst
hardware/rtl/: and_gate.sv  blinky.sv  blinky_uart.sv  top.sv
hardware/rtl/common/: axis_fifo.sv  buffered_uart.sv  gowin_rPLL.sv  uart_rx.sv  uart_tx.sv
hardware/testbench/: and_gate_tb.sv  blinky_uart_tb.sv  top_tb.sv  uart_tb_pkg.sv
scripts/: synth.tcl
src/: main.py
