[project]
name = "tangnano20k-template"
version = "0.1.0"
description = "Sipeed Tang Nano 20K Template Project (UART LED Loopback)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]
